# action-prebuildify

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  binding.gyp  main.cpp  package.json  test.js
.github/: dependabot.yml
.github/workflows/: build.yml  project.yml  test.yml  test_napi.yml  test_neon.yml
compute-matrix/: action.yml  index.js
docker/: action.yml
headers/: action.yml  index.js
node/12/: action.yml
node/14/: action.yml
node/16/: action.yml
node/18/: action.yml
node/19/: action.yml
node/20/: action.yml
prebuild/: action.yml  fetch_node_headers.js  index.js  naming.js  package.json  targets.js
test/: action.yml  naming.js
test/napi/: addon.c  binding.gyp  package-lock.json  package.json  test.js
test/napi/perm/: index.js  package.json
test/neon/: Cargo.toml  README.md  package.json  rust-toolchain.toml  test.js
