[package]
name = "neon"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "1.0.0-alpha.4"
default-features = false
features = ["napi-6"]
